/* 
  Localizable.strings
  Debaser

  Created by Markus Bergh on 2021-04-18.
  
*/

/// List
"List.Today" = "Today's events";
"List.All" = "All events";
"List.Empty" = "No upcoming events today";
"List.Search" = "Search concert";
"List.Search.Result" = "Search results";
"List.Search.Result.Empty" = "No events found";
"List.Event.Cancelled" = "Cancelled";
"List.Event.Postponed" = "Postponed";
"List.Error.Title" = "Oh, no!";
"List.Error.Message" = "Something went wrong while fetching events, please try again.";
"List.Loading" = "Loading...";

/// Detail
"Detail.Age" = "Age %@";
"Detail.Event.Overdue.Title" = "Oops!";
"Detail.Event.Overdue.Message" = "This event has already happened!";
"Detail.Preview.Artist" = "Preview";

/// Favourites
"Favourites" = "Favourites";
"Favourites.Empty" = "No favourites saved";

/// Onboarding
"Onboarding.Skip" = "Skip";
"Onboarding.Step1.Header" = "Use Spotify to preview";
"Onboarding.Step1.Body" = "By connecting your Spotify account to Debaser you can preview the artists immediately in the app¹.";
"Onboarding.Step1.Info" = "¹ Requires a premium account with Spotify.";
"Onboarding.Step2.Header" = "Share gigs with iMessage";
"Onboarding.Step2.Body" = "With the extension to iMessage it is easy and quick to share the event with your friends.";
"Onboarding.Step3.Header" = "Find that upcoming gig";
"Onboarding.Step3.Body" = "You can easily search for that gig you need to attend and also save it in your favourites in case you need a reminder.";
"Onboarding.Step4.Header" = "Almost done! 🏄‍♀️ What is next?";
"Onboarding.Step4.Button.Connect" = "CONNECT TO SPOTIFY¹";
"Onboarding.Step4.Button.Close" = "CLOSE";
"Onboarding.Step4.Info" = "¹ Requires a premium account with Spotify.";

/// Settings
"Settings" = "Settings";
"Settings.Debaser" = "Debaser";
"Settings.Debaser.About" = "About";
"Settings.Debaser.History.Title" = "About Debaser";
"Settings.Debaser.History.Label" = "History";
"Settings.Services" = "Services";
"Settings.Spotify.Connection" = "Connection";
"Settings.Spotify.On" = "Connected";
"Settings.Spotify.Off" = "No connection";
"Settings.Spotify.Connection.Label" = "Connected as:";
"Settings.Spotify.Connection.Off" = "No active connection";
"Settings.Spotify.DisplayName" = "Display name: ";
"Settings.Spotify.Error.Title" = "Error";
"Settings.Spotify.Error.Message" = "This user has not a Spotify Premium account which is a requirement.";
"Settings.Layout" = "Layout";
"Settings.Layout.Images" = "Show images";
"Settings.Layout.DarkMode" = "Dark mode";
"Settings.Layout.HideCancelled" = "Hide cancelled events";
"Settings.Theme" = "Theme";
"Settings.Theme.DarkMode" = "Dark";
"Settings.Theme.NormalMode" = "Normal";
"Settings.Onboarding" = "Onboarding";
"Settings.Onboarding.Show" = "Show onboarding";

/// Detail
"Detail.Buy.Tickets" = "Buy tickets here";
"Detail.Meta.Admission.Free" = "Free";

/// iMessage
"iMessage.Entry.Label" = "Share event in Stockholm";
"iMessage.Search.Placeholder" = "Search event";

/// Widget
"Widget.Description" = "See today's event at Debaser.";
"Widget.Today.Short" = "Today";
"Widget.Today.Long" = "Today at Debaser";
"Widget.Result.Empty" = "There is no upcoming events today";
"Widget.Event.Cancelled" = "Cancelled";
"Widget.Event.Postponed" = "Postponed";
